--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,8 +15,8 @@
         tools:targetApi="31">
         <activity
             android:name=".MainActivity"
-            android:label="@string/title_activity_main"
-            android:exported="true">
+            android:exported="true"
+            android:label="@string/title_activity_main">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
