--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,12 @@
         android:theme="@style/Theme.HeadViews"
         tools:targetApi="31">
         <activity
+            android:name=".WechatActivity"
+            android:exported="false" />
+        <activity
+            android:name=".BilibiliActivity"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/title_activity_main">
